--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,15 @@
     <meta charset=UTF-8>
     <title>{{page.title}}</title>
     <link href=/styles.css rel=stylesheet>
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{page.title}}">
+    <meta name="twitter:description" content="{{page.description}}">
+    <!-- OpenGraph -->
+    <meta name="og:type" content="website">
+    <meta name="og:title" content="{{page.title}}">
+    <meta name="og:description" content="{{page.description}}">
+    <meta name="og:site" content="{{site.title}}">
   </head>
   <body>
     <header>
