Add social media image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,13 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{page.title}}">
     <meta name="twitter:description" content="{{page.description}}">
+    <meta name="twitter:image" content="{{site.image}}">
     <!-- OpenGraph -->
     <meta name="og:type" content="website">
     <meta name="og:title" content="{{page.title}}">
     <meta name="og:description" content="{{page.description}}">
     <meta name="og:site" content="{{site.title}}">
+    <meta name="og:image" content="{{site.image}}">
   </head>
   <body>
     <header>
