--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <footer>
       <p>Original content of this site &copy; Kyle E. Mitchell</p>
       <p><a href=/>reference.kemitchell.com</a></p>
-      <p><a href=https://github.com/kemitchell/reference.kemitchell.com/blob/master/pages/BASENAME.md>Source on GitHub</a></p>
+      <p><a href="{{ site.github.repository_url }}/blob/master/{{ page.path }}">Source on GitHub</a></p>
     </footer>
   </body>
 </html>
