--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset=UTF-8>
     <title>{{page.title}}</title>
     <link href=/styles.css rel=stylesheet>
+    <link href=/pygments.css rel=stylesheet>
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="{{page.title}}">
